--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -5,7 +5,8 @@ ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion
+ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement
 ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -20,17 +21,19 @@ ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.Rank-3\#ChannelRegularConversion=3
 ADC1.Rank-4\#ChannelRegularConversion=4
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 ADC1.master=1
 ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC2.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC2.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC2.ContinuousConvMode=ENABLE
-ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,OffsetSignedSaturation-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,OffsetSignedSaturation-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,OffsetSignedSaturation-8\#ChannelRegularConversion,NbrOfConversion
+ADC2.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,OffsetSignedSaturation-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,OffsetSignedSaturation-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,OffsetSignedSaturation-8\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement
 ADC2.NbrOfConversion=4
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -45,10 +48,10 @@ ADC2.Rank-5\#ChannelRegularConversion=1
 ADC2.Rank-6\#ChannelRegularConversion=2
 ADC2.Rank-7\#ChannelRegularConversion=3
 ADC2.Rank-8\#ChannelRegularConversion=4
-ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC2.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
@@ -78,7 +81,7 @@ Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC2.1.Instance=DMA1_Stream3
 Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_NORMAL
+Dma.ADC2.1.Mode=DMA_CIRCULAR
 Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC2.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -131,8 +134,10 @@ Dma.SPI1_TX.3.SyncEnable=DISABLE
 Dma.SPI1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.3.SyncRequestNumber=1
 Dma.SPI1_TX.3.SyncSignalID=NONE
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=256
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -247,11 +252,11 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:8\:0\:true\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -388,7 +393,7 @@ ProjectManager.DeviceId=STM32H7A3RITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x4000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
@@ -400,14 +405,14 @@ ProjectManager.ProjectFileName=firmware.ioc
 ProjectManager.ProjectName=firmware
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=48000000
+RCC.ADCFreq_Value=18000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
 RCC.APB1Freq_Value=76800000
@@ -435,8 +440,8 @@ RCC.DIVM3=24
 RCC.DIVN1=64
 RCC.DIVN2=12
 RCC.DIVP1Freq_Value=153600000
-RCC.DIVP2=3
-RCC.DIVP2Freq_Value=48000000
+RCC.DIVP2=8
+RCC.DIVP2Freq_Value=18000000
 RCC.DIVP3Freq_Value=64500000
 RCC.DIVQ1=25
 RCC.DIVQ1Freq_Value=12288000
