--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -97,7 +97,8 @@ Dma.Request0=ADC1
 Dma.Request1=ADC2
 Dma.Request2=SPI1_RX
 Dma.Request3=SPI1_TX
-Dma.RequestsNb=4
+Dma.Request4=TIM15_CH1
+Dma.RequestsNb=5
 Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.2.EventEnable=DISABLE
 Dma.SPI1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -134,6 +135,24 @@ Dma.SPI1_TX.3.SyncEnable=DISABLE
 Dma.SPI1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.3.SyncRequestNumber=1
 Dma.SPI1_TX.3.SyncSignalID=NONE
+Dma.TIM15_CH1.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM15_CH1.4.EventEnable=DISABLE
+Dma.TIM15_CH1.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM15_CH1.4.Instance=DMA1_Stream4
+Dma.TIM15_CH1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM15_CH1.4.MemInc=DMA_MINC_ENABLE
+Dma.TIM15_CH1.4.Mode=DMA_NORMAL
+Dma.TIM15_CH1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM15_CH1.4.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM15_CH1.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM15_CH1.4.Priority=DMA_PRIORITY_LOW
+Dma.TIM15_CH1.4.RequestNumber=1
+Dma.TIM15_CH1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM15_CH1.4.SignalID=NONE
+Dma.TIM15_CH1.4.SyncEnable=DISABLE
+Dma.TIM15_CH1.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM15_CH1.4.SyncRequestNumber=1
+Dma.TIM15_CH1.4.SyncSignalID=NONE
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
@@ -195,7 +214,9 @@ Mcu.IP10=RCC
 Mcu.IP11=SYS
 Mcu.IP12=TIM1
 Mcu.IP13=TIM12
-Mcu.IP14=UART4
+Mcu.IP14=TIM15
+Mcu.IP15=TIM17
+Mcu.IP16=UART4
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -204,7 +225,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2S1
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=15
+Mcu.IPNb=17
 Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -236,15 +257,16 @@ Mcu.Pin31=PB6
 Mcu.Pin32=PB7
 Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin34=VP_SYS_VS_tim7
-Mcu.Pin35=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin36=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin35=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin36=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin37=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -256,6 +278,7 @@ NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:8\:0\:true\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
@@ -270,6 +293,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
@@ -355,7 +379,7 @@ PC1.Signal=ADCx_INP11
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=RGB_LED_DATA
 PC12.Locked=true
-PC12.Signal=GPIO_Output
+PC12.Signal=S_TIM15_CH1
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=CV2_IN
 PC2.Signal=ADCx_INP12
@@ -414,7 +438,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=18000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
@@ -529,15 +553,31 @@ SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
 SH.S_TIM12_CH2.ConfNb=1
+SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
+SH.S_TIM15_CH1.ConfNb=1
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1N
+TIM1.IPParameters=Channel-PWM Generation1 CH1N,Prescaler,Period,AutoReloadPreload
+TIM1.Period=49998
+TIM1.Prescaler=50
+TIM12.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
+TIM12.Period=49998
+TIM12.Prescaler=50
+TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM15.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM15.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation1 CH1,Period
+TIM15.Period=191
+TIM17.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM17.IPParameters=AutoReloadPreload,Period,Prescaler
+TIM17.Period=49998
+TIM17.Prescaler=50
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
@@ -546,5 +586,7 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
