--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -294,6 +294,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
@@ -438,7 +439,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=18000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
@@ -570,9 +571,11 @@ TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
 TIM12.Period=49998
 TIM12.Prescaler=50
+TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
-TIM15.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation1 CH1,Period
+TIM15.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation1 CH1,Period,AutoReloadPreload,OCPolarity_1
+TIM15.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM15.Period=191
 TIM17.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM17.IPParameters=AutoReloadPreload,Period,Prescaler
