--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -6,7 +6,7 @@ ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement,master
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement,master,OversamplingMode,RightBitShift,Ratio
 ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -17,14 +17,17 @@ ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
 ADC1.OffsetSignedSaturation-2\#ChannelRegularConversion=DISABLE
 ADC1.OffsetSignedSaturation-3\#ChannelRegularConversion=DISABLE
 ADC1.OffsetSignedSaturation-4\#ChannelRegularConversion=DISABLE
+ADC1.OversamplingMode=ENABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.Rank-3\#ChannelRegularConversion=3
 ADC1.Rank-4\#ChannelRegularConversion=4
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC1.Ratio=32
+ADC1.RightBitShift=ADC_RIGHTBITSHIFT_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
 ADC1.master=1
 ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC2.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_11
@@ -33,7 +36,7 @@ ADC2.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC2.ContinuousConvMode=ENABLE
 ADC2.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,OffsetSignedSaturation-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,OffsetSignedSaturation-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,OffsetSignedSaturation-8\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement
+ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,OffsetSignedSaturation-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,OffsetSignedSaturation-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,OffsetSignedSaturation-8\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement,OversamplingMode,Ratio,RightBitShift
 ADC2.NbrOfConversion=4
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -44,14 +47,17 @@ ADC2.OffsetSignedSaturation-5\#ChannelRegularConversion=DISABLE
 ADC2.OffsetSignedSaturation-6\#ChannelRegularConversion=DISABLE
 ADC2.OffsetSignedSaturation-7\#ChannelRegularConversion=DISABLE
 ADC2.OffsetSignedSaturation-8\#ChannelRegularConversion=DISABLE
+ADC2.OversamplingMode=ENABLE
 ADC2.Rank-5\#ChannelRegularConversion=1
 ADC2.Rank-6\#ChannelRegularConversion=2
 ADC2.Rank-7\#ChannelRegularConversion=3
 ADC2.Rank-8\#ChannelRegularConversion=4
-ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC2.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
-ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+ADC2.Ratio=32
+ADC2.RightBitShift=ADC_RIGHTBITSHIFT_5
+ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC2.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
+ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
