--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -225,9 +225,11 @@ Mcu.IP10=RCC
 Mcu.IP11=SYS
 Mcu.IP12=TIM1
 Mcu.IP13=TIM12
-Mcu.IP14=TIM15
-Mcu.IP15=TIM17
-Mcu.IP16=UART4
+Mcu.IP14=TIM13
+Mcu.IP15=TIM14
+Mcu.IP16=TIM15
+Mcu.IP17=TIM17
+Mcu.IP18=UART4
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -236,7 +238,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2S1
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=17
+Mcu.IPNb=19
 Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -268,16 +270,20 @@ Mcu.Pin31=PB6
 Mcu.Pin32=PB7
 Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin34=VP_SYS_VS_tim7
-Mcu.Pin35=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin36=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin37=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin35=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM13_VS_OPM
+Mcu.Pin37=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM14_VS_OPM
+Mcu.Pin39=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin4=PC2
+Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin41=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=38
+Mcu.PinsNb=42
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -307,6 +313,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -450,7 +458,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,13-MX_TIM13_Init-TIM13-false-HAL-true,14-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=18000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
@@ -582,15 +590,21 @@ TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
 TIM12.Period=49998
 TIM12.Prescaler=50
+TIM13.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM13.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM13.Period=199 
+TIM13.Prescaler=15299
+TIM14.IPParameters=Prescaler,Period
+TIM14.Period=199 
+TIM14.Prescaler=15299
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM15.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
-TIM15.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation1 CH1,Period,AutoReloadPreload,OCPolarity_1
+TIM15.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload,OCPolarity_1
 TIM15.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM15.Period=191
 TIM17.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM17.IPParameters=AutoReloadPreload,Period,Prescaler
-TIM17.Period=49998
+TIM17.Period=24999
 TIM17.Prescaler=50
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
@@ -600,6 +614,14 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
+VP_TIM13_VS_OPM.Mode=OPM_bit
+VP_TIM13_VS_OPM.Signal=TIM13_VS_OPM
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM14_VS_OPM.Mode=OPM_bit
+VP_TIM14_VS_OPM.Signal=TIM14_VS_OPM
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=custom
