--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -171,7 +171,7 @@ FREERTOS.configMINIMAL_STACK_SIZE=256
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
-I2C1.Timing=0x109096E2
+I2C1.Timing=0x20B0CCFF
 I2S1.AudioFreq=I2S_AUDIOFREQ_48K
 I2S1.CPOL=I2S_CPOL_LOW
 I2S1.ErrorAudioFreq=0.0 %
@@ -459,90 +459,96 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,13-MX_TIM13_Init-TIM13-false-HAL-true,14-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=18000000
-RCC.AHB12Freq_Value=153600000
-RCC.AHB4Freq_Value=153600000
-RCC.APB1Freq_Value=76800000
-RCC.APB2Freq_Value=76800000
-RCC.APB3Freq_Value=76800000
-RCC.APB4Freq_Value=76800000
-RCC.AXIClockFreq_Value=153600000
-RCC.CDCPREFreq_Value=153600000
+RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
+RCC.ADCFreq_Value=6000000
+RCC.AHB12Freq_Value=280000000
+RCC.AHB4Freq_Value=280000000
+RCC.APB1Freq_Value=140000000
+RCC.APB2Freq_Value=140000000
+RCC.APB3Freq_Value=140000000
+RCC.APB4Freq_Value=140000000
+RCC.AXIClockFreq_Value=280000000
+RCC.CDCPREFreq_Value=280000000
 RCC.CDPPRE=RCC_APB3_DIV2
 RCC.CDPPRE1=RCC_APB1_DIV2
 RCC.CDPPRE2=RCC_APB2_DIV2
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=153600000
-RCC.CpuClockFreq_Value=153600000
+RCC.CortexFreq_Value=280000000
+RCC.CpuClockFreq_Value=280000000
 RCC.DAC1Freq_Value=32000
 RCC.DAC2Freq_Value=32000
-RCC.DFSDM2ACLkFreq_Value=76800000
-RCC.DFSDM2Freq_Value=76800000
-RCC.DFSDMACLkFreq_Value=12288000
-RCC.DFSDMFreq_Value=76800000
-RCC.DIVM1=5
-RCC.DIVM2=2
-RCC.DIVM3=24
-RCC.DIVN1=64
-RCC.DIVN2=12
-RCC.DIVP1Freq_Value=153600000
-RCC.DIVP2=8
-RCC.DIVP2Freq_Value=18000000
-RCC.DIVP3Freq_Value=64500000
+RCC.DFSDM2ACLkFreq_Value=140000000
+RCC.DFSDM2Freq_Value=140000000
+RCC.DFSDMACLkFreq_Value=22400000
+RCC.DFSDMFreq_Value=140000000
+RCC.DIVM1=6
+RCC.DIVM2=5
+RCC.DIVM3=4
+RCC.DIVN1=140
+RCC.DIVN2=64
+RCC.DIVN3=32
+RCC.DIVP1Freq_Value=280000000
+RCC.DIVP2=25
+RCC.DIVP2Freq_Value=12288000
+RCC.DIVP3=6
+RCC.DIVP3Freq_Value=32000000
 RCC.DIVQ1=25
-RCC.DIVQ1Freq_Value=12288000
-RCC.DIVQ2=6
-RCC.DIVQ2Freq_Value=24000000
-RCC.DIVQ3Freq_Value=64500000
-RCC.DIVR1Freq_Value=153600000
-RCC.DIVR2Freq_Value=72000000
-RCC.DIVR3Freq_Value=64500000
-RCC.FDCANFreq_Value=12288000
-RCC.FMCFreq_Value=153600000
+RCC.DIVQ1Freq_Value=22400000
+RCC.DIVQ2=38
+RCC.DIVQ2Freq_Value=8084210.52631579
+RCC.DIVQ3=6
+RCC.DIVQ3Freq_Value=32000000
+RCC.DIVR1Freq_Value=280000000
+RCC.DIVR2Freq_Value=153600000
+RCC.DIVR3=32
+RCC.DIVR3Freq_Value=6000000
+RCC.FDCANFreq_Value=22400000
+RCC.FMCFreq_Value=280000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=153600000
-RCC.HCLKFreq_Value=153600000
-RCC.I2C123Freq_Value=76800000
-RCC.I2C4Freq_Value=76800000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=76800000
-RCC.LPTIM2Freq_Value=76800000
-RCC.LPTIM345Freq_Value=76800000
-RCC.LPUART1Freq_Value=76800000
-RCC.LTDCFreq_Value=64500000
+RCC.HCLK3ClockFreq_Value=280000000
+RCC.HCLKFreq_Value=280000000
+RCC.I2C123Freq_Value=140000000
+RCC.I2C4Freq_Value=140000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=140000000
+RCC.LPTIM2Freq_Value=140000000
+RCC.LPTIM345Freq_Value=140000000
+RCC.LPUART1Freq_Value=140000000
+RCC.LTDCFreq_Value=6000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=153600000
+RCC.MCO2PinFreq_Value=280000000
 RCC.PLL2FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=153600000
+RCC.QSPIFreq_Value=280000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=12288000
-RCC.SAI2AFreq_Value=12288000
-RCC.SAI2BFreq_Value=12288000
-RCC.SDMMCFreq_Value=12288000
-RCC.SPDIFRXFreq_Value=12288000
+RCC.SAI1Freq_Value=22400000
+RCC.SAI2AFreq_Value=22400000
+RCC.SAI2BFreq_Value=22400000
+RCC.SDMMCFreq_Value=22400000
+RCC.SPDIFRXFreq_Value=22400000
+RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
 RCC.SPI123Freq_Value=12288000
-RCC.SPI45Freq_Value=76800000
-RCC.SPI6Freq_Value=76800000
+RCC.SPI45Freq_Value=140000000
+RCC.SPI6Freq_Value=140000000
 RCC.SRDPPRE=RCC_APB4_DIV2
-RCC.SWPMI1Freq_Value=76800000
-RCC.SYSCLKFreq_VALUE=153600000
+RCC.SWPMI1Freq_Value=140000000
+RCC.SYSCLKFreq_VALUE=280000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=153600000
-RCC.Tim2OutputFreq_Value=153600000
-RCC.TraceFreq_Value=153600000
-RCC.USART16Freq_Value=76800000
-RCC.USART234578Freq_Value=76800000
-RCC.USBFreq_Value=12288000
-RCC.VCO1OutputFreq_Value=307200000
-RCC.VCO2OutputFreq_Value=144000000
-RCC.VCO3OutputFreq_Value=129000000
-RCC.VCOInput1Freq_Value=4800000
-RCC.VCOInput2Freq_Value=12000000
-RCC.VCOInput3Freq_Value=1000000
+RCC.Tim1OutputFreq_Value=280000000
+RCC.Tim2OutputFreq_Value=280000000
+RCC.TraceFreq_Value=280000000
+RCC.USART16Freq_Value=140000000
+RCC.USART234578Freq_Value=140000000
+RCC.USBFreq_Value=22400000
+RCC.VCO1OutputFreq_Value=560000000
+RCC.VCO2OutputFreq_Value=307200000
+RCC.VCO3OutputFreq_Value=192000000
+RCC.VCOInput1Freq_Value=4000000
+RCC.VCOInput2Freq_Value=4800000
+RCC.VCOInput3Freq_Value=6000000
 SH.ADCx_INP10.0=ADC2_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.ADCx_INP11.0=ADC2_INP11,IN11-Single-Ended
